--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,11 +1,154 @@
-.main {
+.header{
+  width:100%;
+  height:138px;
+  background:#C9E265;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  justify-content:center;
+  align-items:center;
+  padding-bottom:10px;
+
 }
+
+
+
+.main {
+}
+
+.main_window_back {
+  width:100%;
+  height:450px;
+  background:#FFFFFF;
+  display: flex;
+  justify-content:center;
+
+
+  position :relative;
+  overflow:hidden;
+}
+
+.slider_item{
+  display:block;
+  position: absolute;
+
+  width: inherit;
+  height:inherit;
+  left:100%;
+  animation :slideAnime 60s ease infinite;
+}
+
+.slider_item:nth-of-type(1) {animation-delay:0s}
+.slider_item:nth-of-type(2) {animation-delay:15s}
+.slider_item:nth-of-type(3) {animation-delay:30s}
+.slider_item:nth-of-type(4) {animation-delay:45s}
+
+@keyframes slideAnime{
+  0% { left:100%}
+  3% { left:0%}
+  22% { left:0%}
+  25% { left: -100%}
+  100% { left:-100%}
+}
+
+
+
+.main_notice_bottun_back {
+  width:100%;
+  height:205px;
+  background:#C9E265;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.notice{
+  width:700px;
+  height:169px;
+  background:#FFFEFE;
+  border-radius:10px;
+  margin-right:38px;
+  padding:29px 0px 0px 0px;
+  display:flex;
+  justify-content:space-around;
+}
+
+.notice ul{
+  padding-left:0;
+}
+.notice li{
+  font-size:13px;
+  list-style:none;
+}
+
+.buttons{
+  padding-top:5px;
+  padding-bottom:5px;
+  width: 300px;
+  height:169px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+}
+
+.notice_button{
+  width: 300px;
+  height:66px;
+  background:#589989;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:#FFFFFF;
+}
+
+.saiyou_button{
+  width: 300px;
+  height:83px;
+  background: #FAD82A;;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.menu_bar{
+  width:100%;
+  height:45px;
+  display:flex;
+  background:#C9E265;
+}
+
+.menu_bar ul{
+  display:flex;
+  justify-content:space-around;
+  margin-left:6px;
+}
+
+.menu_tab{
+  width:251px;
+  height:45px;
+  background:#FFFFFF;
+  border-radius: 10px 10px 0px 0px;
+  display:flex;
+  justify-content:space-around;
+  align-items:center;
+  font-weight:700;
+  margin:0px 7px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .description {
   display: inherit;
