--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,6 @@
 .header{
   width:100%;
-  height:138px;
+  height:158px;
   background:#C9E265;
   display: flex;
   justify-content:center;
@@ -53,7 +53,7 @@
 
 .main_notice_bottun_back {
   width:100%;
-  height:205px;
+  height:175px;
   background:#C9E265;
   display: flex;
   justify-content:center;
@@ -62,7 +62,7 @@
 
 .notice{
   width:700px;
-  height:169px;
+  height:129px;
   background:#FFFEFE;
   border-radius:10px;
   margin-right:38px;
@@ -80,19 +80,17 @@
 }
 
 .buttons{
-  padding-top:5px;
-  padding-bottom:5px;
   width: 300px;
-  height:169px;
+  height:129px;
   display:flex;
   flex-direction:column;
   justify-content:space-between;
 }
 
 .notice_button{
-  width: 300px;
-  height:66px;
-  background:#589989;
+  width: 270px;
+  height:50px;
+  background:#7DA452;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   display:flex;
@@ -102,8 +100,8 @@
 }
 
 .saiyou_button{
-  width: 300px;
-  height:83px;
+  width: 270px;
+  height:63px;
   background: #FAD82A;;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -117,6 +115,7 @@
   height:45px;
   display:flex;
   background:#C9E265;
+  justify-content:center;
 }
 
 .menu_bar ul{
@@ -126,7 +125,7 @@
 }
 
 .menu_tab{
-  width:251px;
+  width:200px;
   height:45px;
   background:#FFFFFF;
   border-radius: 10px 10px 0px 0px;
@@ -137,285 +136,150 @@
   margin:0px 7px;
 }
 
+.content_main{
+width:100%;
+background:#FFFFFF;
 
-
-
-
-
-
-
-
-
-
-
-
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo,
-.thirteen {
-  position: relative;
-}
-
-.thirteen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
-}
-
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
-}
-
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+.content_main_top{
+  width:100%;
+  height:279px;
+  background-image:url(/Vectorcontent_top_image.svg);
+  display:flex;
+  align-items:center;
+  padding-left:80px;
+  font-size:30px;
   }
 
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
+ .content_main_1{
+  width:100%;
+  height:301px;
+  display:flex;
+  background:#FFFFFF;
+  align-items:center;
+  font-weight:700;
 
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
+  padding:0px 20px 0px 20px;
+  justify-content:space-around;
+ }
 
-  .card:hover span {
-    transform: none;
-  }
-}
+ .content_main_2{
+  width:100%;
+  height:301px;
+  display:flex;
+  background:#FFFFFF;
+  align-items:center;
+  font-weight:700;
+  margin:180px 0px;
+  padding:0px 20px 0px 70px;
+  justify-content:space-around;
+ }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
+ .content_main_3{
+  width:100%;
+  height:301px;
+  display:flex;
+  background:#FFFFFF;
+  align-items:center;
+  font-weight:700;
+  margin:180px 0px;
+  padding:0px 20px 0px 0px;
+  justify-content:space-around;
+ }
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
+ .content_main_4{
+  width:100%;
+  height:201px;
+  display:flex;
+  background:#FFFFFF;
+  align-items:center;
+  font-weight:700;
+  margin:180px 0px;
+  padding:0px 20px 0px 70px;
+  justify-content:space-around;
+ }
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
+ .content_main_bottom{
+  width:100%;
+  height:279px;
+  background-image:url(/Vectorcontent_top_image.svg);
+  transform:scale(-1,-1);
+  display:flex;
+  align-items:center;
+  padding-left:80px;
+  font-size:30px;
+ }
 
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
+ .sns_back{
+  width:100%;
+  height:1647px;
+  background:#C9E265;
+  display:flex;
+  align-items:center;
+  justify-content:space-around;
+  flex-direction:column;
+ }
 
-  .center {
-    padding: 8rem 0 6rem;
-  }
+ .twitter{
+  padding:20px 20px;
+  width:700px;
+  height:1199px;
+  background: #FFFFFF;
+  border-radius: 10px;
+  overflow:scroll;
+ }
 
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
+ .twitter h2{
+  margin-bottom:20px;
 
-  .description {
-    font-size: 0.8rem;
-  }
+ }
 
-  .description a {
-    padding: 1rem;
-  }
+ .line{
+  padding:20px 20px;
+  width:700px;
+  height:330px;
+  background: #FFFFFF;
+  border-radius: 10px;
+ }
 
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
+ .line h2{
+    padding:20px 20px;
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
+ }
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
+ .line_content{
+  display:flex;
+ }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
+ .line_paragrah{
+  display:flex;
+  flex-direction:column;
+  justify-content:space-around;
+  padding:20px
+ }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
+ .footer{
+  width:100%;
+  height: 393px;
+  background:#C9E265;
+  padding:100px;
+ }
 
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
+ .footer li{
+  list-style:none;
+  margin:10px;
+  font-weight:700;
+ }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
+
+
+
+
+
+
+
+
+
+
+
