--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -53,7 +53,7 @@
 
 .main_notice_bottun_back {
   width:100%;
-  height:175px;
+  height:185px;
   background:#C9E265;
   display: flex;
   justify-content:center;
@@ -112,7 +112,7 @@
 
 .menu_bar{
   width:100%;
-  height:45px;
+  height:55px;
   display:flex;
   background:#C9E265;
   justify-content:center;
@@ -134,6 +134,22 @@
   align-items:center;
   font-weight:700;
   margin:0px 7px;
+  transition: .3s;
+}
+.menu_tab::before{
+  z-index:-1;
+  opacity:0;
+  transition:.3s;
+}
+
+.menu_tab:hover{
+  height:55px;
+  transform: translateY(-10px);
+}
+
+.menu_tab:hover::before{
+  transform: translateY(10px);
+  opaticy:1;
 }
 
 .content_main{
@@ -261,15 +277,35 @@ background:#FFFFFF;
 
  .footer{
   width:100%;
-  height: 393px;
-  background:#C9E265;
-  padding:100px;
+  height: 253px;
+  background:#FFFFFF;
+  padding:20px;
+  display:flex;
+  flex-direction:column;
  }
 
  .footer li{
   list-style:none;
   margin:10px;
   font-weight:700;
+ }
+
+ .footer_menu{
+  margin:0px 0px 10px 50px;
+ }
+
+ .company_data{
+  width:1000px;
+  height:90px;
+  display:flex;
+  justify-content:flex-end;
+
+ }
+ .company_icon{
+  display:flex;
+  height:90px;
+  align-items:center;
+  margin-right:10px;
  }
 
 
