🎨 他社との違いUI

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -459,7 +459,7 @@ height:660px;
   margin-bottom:15px;
 };
 
-/*コンサルティング*/
+/*他の派遣会社との違い*/
 
 .content_consul_frame{
   width:100%;
@@ -473,9 +473,9 @@ height:660px;
   align-items:center;
 }
 
-.content_consul_frame{
+.content_different_frame{
   width:100%;
-  height:1300px;
+  height:2300px;
   background: #FFFFFF;
   border: 18px solid #C9E265;
   border-radius: 2px;
@@ -485,9 +485,9 @@ height:660px;
   align-items:center;
 }
 
-.content_consul_title{
+.content_different_title{
   width:100%;
-  height:120px;
+  height:100px;
 
   padding-left:65px;
 
@@ -496,66 +496,76 @@ height:660px;
   justify-content:center;
 }
 
-.content_consul_title h2{
+.content_different_title h2{
   color:#C9E265;
   font-size:38px;
 }
 
-.consulting{
-  width:800px;
-  height:318px;
+.different{
+  width:900px;
+  height:400px;
   background:#FFFFFF;
   border: 5px solid #C9E265;
-  margin-top:30px;
-  margin-bottom:10px;
+
+  margin-bottom:40px;
 
 }
 
-.consulting_top {
+.different_top{
 padding-top:20px;
 padding-left:30px;
-font-size:12px;
+margin-bottom:15px;
+
 }
 
-.consulting_description{
-  margin-top:15px;
-  display:flex;
-  flex-direction:row;
-  justify-content:center;
-  align-items:center;
+.different_discription{
+    display:flex;
+  }
 
-  
-}
-.consulting_right{
-  width:400px;
-  height:235px;
-  display:flex;
-  align-items:center;
+
+.different_other{
+  width:500px;
+  height:120px;
   line-height:30px;
   margin-left:40px;
-  font-size:13px;
+  background: #ddd;
+  border-radius:5px;
+  padding:10px 10px 10px 20px;
 }
 
-.consulting_hyouka_frame{
-  width:100%;
-  height:500px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
+.different_mik{
+  width:500px;
+  height:120px;
+  line-height:30px;
+  margin-left:40px;
   background:#C9E265;
+  border-radius:5px;
+  padding:10px 10px 10px 20px;
+  margin-bottom:20px;
 }
 
-.consulting_hyouka{
-  width:1076px;
-  height:408px;
-  background:#FFFFFF;
-  border: 5px solid #C9E265;
-  margin-bottom:10px;
+.different_left{
+  margin-right:30px;
 }
 
-.consulting_hyouka_top {
-  padding:30px 0px 10px 70px;
-  }
+.different_left p{
+  font-size:15px;
+  padding-top:5px;
+  padding-left:10px;
+}
+
+
+.different_right{
+
+  width:300px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+
+}
+
+
+
 
 
   .content_constitution_main_top{
@@ -1181,6 +1191,7 @@ align-items:center;
   padding:10px;
 }
 
+
 .search_items{
   margin-top:5px;
   list-style:none;
@@ -1314,6 +1325,9 @@ align-items:center;
   margin-top:100px;
 }
 
+
+
+
 .oubo_button{
   width:270px;
   height:55px;
@@ -1398,7 +1412,7 @@ align-items:center;
 
 .content_oubo{
   width:100%;
-  height:2500px;
+  height:3200px;
   background: #FFFFFF;
   border: 18px solid #C9E265;
   border-radius: 2px;
@@ -1424,21 +1438,29 @@ align-items:center;
 
 .oubo_form{
   margin-top:30px;
-  width:750px;
+  width:850px;
   border:5px solid #C9E265;
   padding:30px;
+  background: rgba(201, 226, 101, 0.3);
+
+  display:flex;
+  justify-content:center;
 }
 
 .oubo_form h4{
   font-size:14px;
   padding-left:10px;
 }
+.oubo_input_wrapper{
+  width:550px;
+}
+
 
 .oubo_input_text{
   width:250px;
   height:45px;
   border-radius:10px;
-  border:1px solid #ddd;
+  border:1px solid #C9E265;
   margin:10px;
 }
 
@@ -1456,6 +1478,39 @@ align-items:center;
   border-radius:10px;
   border:1px solid #ddd;
   margin:10px;
+}
+
+.shikaku_wrapper{
+  height:900px;
+  width:600px;
+  display:flex;
+  flex-direction:column;
+  flex-wrap:wrap;
+
+  margin-top:20px;
+  margin-bottom:20px;
+}
+
+.search_shikaku{
+  display:flex;
+  flex-direction:column;
+  flex-wrap:wrap;
+
+}
+.shikaku_wrapper ul{
+  margin-top:5px;
+  margin-bottom:20px;
+}
+
+.language_select{
+    width:700px;
+    height:200px;
+    display:flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+
+    margin-top:10px;
+
 }
 
 .oubo_kakunin_button{
