--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -224,6 +224,7 @@ height:660px;
   justify-content:center;
  }
 
+
  .twitter_title {
   height:110px;
   width:100%;
@@ -241,12 +242,15 @@ height:660px;
  }
 
  .twitter_content{
-  width:800px;
+  width:600px;
   height:800px;
-  overflow:scroll;
+  border:5px solid #C9E265;
+  padding:20px;
 
   display:flex;
-  justyfy-content:center;
+  flex-direction:column;
+  align-items:center;
+  overflow:scroll;
  }
 
 
@@ -426,7 +430,7 @@ height:660px;
 
 
 .people{
-  width:1000px;
+  width:95%;
   height:400px;
   background:#FFFFFF;
   border: 5px solid #C9E265;
@@ -434,13 +438,13 @@ height:660px;
   align-items:center;
   margin-top:10px;
   margin-bottom:40px;
-
+  overflow:scroll;
 }
 
 
 
 .people_left{
-  width:400px;
+  width:35%;
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -772,8 +776,8 @@ align-items:center;
 
 
 .step_frame{
-  width:1000px;
-  height:300px;
+  width:800px;
+  height:270px;
   border:5px solid  #C9E265;
 
   padding:20px;
@@ -786,11 +790,20 @@ align-items:center;
 
 .step_content{
   display:flex;
+  justify-content:space-around;
 }
 
 .step_discription{
   margin-top:20px;
-  width:500px;
+  width:450px;
+  display:flex;
+  align-items:center;
+
+}
+
+.step_image{
+  margin-top:20px;
+
 }
 
 .flow_down{
@@ -843,17 +856,21 @@ align-items:center;
   justify-content:center;
   flex-direction:column;
   align-items:center;
+
+  overflow:scroll;
 }
 
 .Internal_Line_title{
-  width:1000px;
-  height:180px;
-
-  padding-left:65px;
-
+  width:85%;
+  height:200px;
   display:flex;
-  flex-direction:column;
-  justify-contetn:center;
+    justify-contetn:center;
+    overflow:scroll;
+}
+
+.Line_title_left{
+  width:650px;
+  margin-right:50px;
 }
 
 .Internal_Line_title h1{
@@ -1275,25 +1292,39 @@ align-items:center;
 
 .content_recruit_detail{
   width:100%;
-  height:1500px;
+  height:1600px;
   background: #FFFFFF;
   border: 18px solid #C9E265;
   border-radius: 2px;
 
   display:flex;
   flex-direction:column;
-  
-  overflow:scroll;
+  justify-content:center;
+
+  overflow:wrap;
+
+ 
 }
 
 .recruit_detail_title{
-  font-size:10px;
+  font-size:13px;
   width:100%;
-  height:100px;
-
+  height:180px;
+  
   display:flex;
   align-items:center;
   justify-content:space-around;
+  background:#FFFFFF;
+  padding-left:2.5%;
+  padding-right:2.5%;
+ 
+}
+
+
+.detail_content_wrapper{
+  height:1200px;
+  width:95%;
+  margin-left:2.5%;
 }
 
 .detail_content{
@@ -1308,8 +1339,8 @@ align-items:center;
 }
 
 .detail_content_title{
-  height:45px;
-  background:#C9E265;
+  height:50px;
+  background:#ddd;
   width:100%;
 
   display:flex;
@@ -1334,7 +1365,12 @@ align-items:center;
   background:#C9E265;
   border:0px none;
   border-radius:10px;
-}
+  font-size:15px;
+  
+  display:flex;
+  justify-content:center;
+  align-items:center;
+ }
 
 
 
